# United-Outdoors

./: Feedback.docx  README.md
.github/: pull_request_template.md
AdventureWorks.bak/: HumanResources.Department.columns  HumanResources.Department.csv  HumanResources.Employee.columns  HumanResources.Employee.csv  HumanResources.EmployeeDepartmentHistory.columns  HumanResources.EmployeeDepartmentHistory.csv  HumanResources.EmployeePayHistory.columns  HumanResources.EmployeePayHistory.csv  HumanResources.JobCandidate.columns  HumanResources.JobCandidate.csv  HumanResources.Shift.columns  HumanResources.Shift.csv  Person.Address.columns  Person.Address.csv  Person.AddressType.columns  Person.AddressType.csv  Person.BusinessEntity.columns  Person.BusinessEntity.csv  Person.BusinessEntityAddress.columns  Person.BusinessEntityAddress.csv  Person.BusinessEntityContact.columns  Person.BusinessEntityContact.csv  Person.ContactType.columns  (+117 more)
data_warehouse/: DataWarehouse.ipynb  pyproject.toml  readme.md  requirements.txt  source_data.py
data_warehouse/source_data/: aenc.accdb
data_warehouse/source_data/sql/: AdventureWorks.sql  Aenc.sql  Aenc_foreign_keys.sql  NorthWind.sql
data_warehouse/sql/: UnitedOutdoors_constraints.sql  UnitedOutdoors_creation.sql
training/: Customer.ipynb  CustomerCluster.ipynb  Customer_Cluster.ipynb  EmployeePayHistory.ipynb  EmployeePayHistory_Rate.ipynb  ProductCostHistory_StandardCost.ipynb  ProductListPriceHistory_Listprice.ipynb  ProductVendor_Cluster.ipynb  WorkOrder_ActualCost.ipynb  common_filters.py  common_functions.py  pyproject.toml
training/cluster/: Customer_Cluster.ipynb  ProductVendor_Cluster.ipynb
training/prediction/: EmployeePayHistory_Rate.ipynb  OrderHeader_PurchasingOrderQuantity.ipynb  ProductCostHistory_StandardCost.ipynb  ProductListPriceHistory_Listprice.ipynb  TransactionHistory_ActualCost.ipynb  TransactionHistory_Quantity.ipynb  WorkOrder_ActualCost.ipynb
(+15 files in other folders)
