[tool.poetry]
name = "united outdoors"
version = "0.1.0"
description = ""
authors = ["Tjorn <74906283+Nrojt@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
