[tool.poetry]
name = "united outdoors"
version = "0.1.0"
description = ""
authors = ["Tjorn <74906283+Nrojt@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.1.3"
pyodbc = "^5.1.0"
colorama = "^0.4.6"
pandas = "^2.2.2"
sqlalchemy = "^2.0.30"
rpds-py = "^0.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
