[tool.poetry]
name = "training"
version = "0.1.0"
description = ""
authors = ["Tjorn <74906283+Nrojt@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.0"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
